--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="img/icon.png">
-        <audio loop autoplay src="sound/sharky.wav"></audio>
     </head>
     <body>
+        <div id="music"></div>
       
         <div id="game" class="column"></div>
      
